Добавить тесты, класс Node, методы в InMemoryHistoryManager.